[project]
name = "reverse-geolocate"
version = "1.1.2"
description = "Reverse Geolocate from Lat/Long information and write location information into sidecard files"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-xmp-toolkit>=2.1.0",
    "requests>=2.32.5",
]

[project.scripts]
reverse-geolocate = "reverse_geolocate.reverse_geolocate:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
